--- a/EcolNotebook.Rmd
+++ b/EcolNotebook.Rmd
@@ -1,5 +1,3 @@
-
-
 # Ecological Genomics Notebook  
 
 ## Author: Erika Bueno  
@@ -104,7 +102,6 @@
 
 ------
 <div id='id-section1'/>   
-
 ### Entry 1: 2020-01-13, Monday.   
 
 Today we discussed the definition of Ecological genomics and how it relates to the history of population genetics. Specifically, I learned about the founders of population genetics (Seawall Wright, R.A. Fisher, J.B.S. Haldane) and their contributions to the field. For example, Wright's island model is used to predict how subpopulations "represented by islands" may behave assuming population size is the same and always stable (don't grow or decline).
@@ -162,8 +159,7 @@ High  𝜋  with rare variants in population
 
 ------
 <div id='id-section3'/>   
-
-### Entry 3: 2020-01-15, Wednesday.   
+### Entry 2: 2020-01-15, Wednesday.   
 
 Lecture notes: How do the questions tie in with the technology?
 
@@ -297,8 +293,7 @@ Synthetic- wells (Illumina) vs emulsion based (OX genomics)
 
 ------
 <div id='id-section8'/>   
-
-### Entry 8: 2020-01-22, Wednesday.   
+### Entry 3: 2020-01-22, Wednesday.   
 
 **Population genomics**
 
@@ -374,518 +369,540 @@ A --> C
 
 ------
 <div id='id-section11'/>   
-
-### Entry 11: 2020-01-27, Monday.   
+### Entry 4: 2020-01-27, Monday.   
 
 
 
 ------
 <div id='id-section13'/>   
+### Entry 5: 2020-01-29, Wednesday.   
 
-### Entry 13: 2020-01-29, Wednesday.   
+Lecture notes: What's the difference between Rmd vs md?
 
+* markdown a type of language that renders it into something readable
 
+* inserting web links: [TEXT](URL)
 
-------
-<div id='id-section14'/>   
+* numbered lists: 1. TEXT
 
-### Entry 14: 2020-01-30, Thursday.   
+* embedding code: ``` LINE BREAK ```
 
+  ``` cd ~/mydata```
 
+* This is where the class data are: ` /data/project.data`
+* two windows: notebook open and terminal
+* pbio381.uvm.edu server name
 
-------
-<div id='id-section15'/>   
+Learning objectives
 
-### Entry 15: 2020-01-31, Friday.   
+* background on species
+* understand the pipeline
+* bash scripts
+* sequencing quality assessment
+* mapping to ref genome
 
+Red spruce- cool moist climates, northerly distributed, higher in elevation as you move south.
 
+* genetic basis of climate adaptation
+* highly fragmented populations
+* alleles that might be potentially conserved
+* inform nature conservancy to improve restoration management practices for red spruce
+
+Genomic DNA from needles (110 mother trees; 23 populations)
+
+* ref genome based on multiple tissues and developmental stages in related species white spruce
+* 80,000 probes were designed based on these transcriptomes (120 bp)
+* coverage of at least one probe for 38,570 unigenes (90 bp, 85% coverage)
+* fragmentation, hybridization with probes, sequenced on a Hiseq X to generate paired end 150 bp reads.
+  * single end only one end is paired
+  * paired ends two ends are sequenced- more powerful than single end
+
+Pipeline
+
+1. fastq files- compressed files containing reads 
+   1. often zipped in a fastq.gz
+2. visualize with fastQC- assess quality
+3.  trimmed .fastq - trimmomatic- visualize again with fastQC
+4. map or align those reads to ref genome with BWA (.sam)
+5. post processing- samtools (.bam)
+   1. look for PCR duplicates- avoiding pseudoreplication by getting rid of duplicate reads
+   2. generate stats around depth and quality for each sample
+
+`cd /data/project_data/RS_ExomeSeq//fastq/edge_fastq/`
+
+naming- population code_mother tree_read direction_file ext
+
+compressed .gz format- cant use head code`
+
+`zcat FILE | head -n 4` #first four lines
+
+metadata about run
+
+`@GWNJ-0842:368:GW1809211440:2:1101:18355:2170 2:N:0:NCGTATCA+NTTCGCCT
+NACAGAATTAATTTCATGGGAGAGCAAATGTACGTAACTAGGAAAATTTAAAGGGCTGTATGCACCCATATCCTCCTCATCCTCATAAGCATCATCAACAGATATGATAGGAAGAATTATGCCAGTTACAAGCTAGAACCCTCCCTTTTT
++
+#AA<7A-A-AJA--<F--7F---7--<-<----<F----<-7--<<FFJ--<F-<--7--<F7-FJ<AF-A777<<F--<FF<-F--<-7-F-AFF<-F-<A-7-77-7A<F-7<-7<-77F-F<<F<-FFFJ-------)-)))77-AF`
+
+1. information on which machine
+2. barcode sequence
+3. sequence (including any N's)
+4. separator is a plus sign
+5. ASCI representation of the quality of the read
+
+Phred quality scores- 0-40: what's the probability that the machine read the correct nucleotide
+
+p = 10 ^-38/10
+
+= 10^-3.8
+
+p= 0.0038 # probability that the correct nucleotide was called
+
+Running fastQC -for CRA individuals
+
+usually the text files get redirected to local machine- for this example were redirectiong to shared space
+
+`repo`
+
+my scripts - vim- press i (active edit mode) - #!/bin/bash #language info 
+
+`cd ~/EcolGenomics/myresults/ #where we are saving the fastqc results
+mkdir fastqc` #making the folder where it will save
+
+creating a for loop
+
+`for file in /data/project_data/RS_ExomeSeq/fastq/edge_fastq/CRA*fastq.gz`
+
+do
+
+`fastqc ${file} -o fastqc`
+
+done
+
+shift + colon 
+
+:wq fastqc.sh #bash script saved in  myscripts and exit the vim
+
+fix permission to run the script
+
+`chmod u+x` #an X should appear now
+
+`bash fastqc.sh`
+
+it should run 
+
+git pull after
+
+```
+git pull
+git add --all .
+git commit -m "note"
+git push
+```
 
 ------
 <div id='id-section16'/>   
-
 ### Entry 16: 2020-02-03, Monday.   
 
 
 
 ------
-<div id='id-section17'/>   
-
-### Entry 17: 2020-02-04, Tuesday.   
-
-
-
-------
 <div id='id-section18'/>   
-
 ### Entry 18: 2020-02-05, Wednesday.   
 
 
 
 ------
-<div id='id-section19'/>   
-
-### Entry 19: 2020-02-06, Thursday.   
-
-
-
-------
 <div id='id-section20'/>   
-
 ### Entry 20: 2020-02-07, Friday.   
 
 
 
 ------
 <div id='id-section21'/>   
-
 ### Entry 21: 2020-02-10, Monday.   
 
 
 
 ------
 <div id='id-section22'/>   
-
 ### Entry 22: 2020-02-11, Tuesday.   
 
 
 
 ------
 <div id='id-section23'/>   
-
 ### Entry 23: 2020-02-12, Wednesday.   
 
 
 
 ------
 <div id='id-section24'/>   
-
 ### Entry 24: 2020-02-13, Thursday.   
 
 
 
 ------
 <div id='id-section25'/>   
-
 ### Entry 25: 2020-02-14, Friday.   
 
 
 
 ------
 <div id='id-section26'/>   
-
 ### Entry 26: 2020-02-17, Monday.   
 
 
 
 ------
 <div id='id-section27'/>   
-
 ### Entry 27: 2020-02-18, Tuesday.   
 
 
 
 ------
 <div id='id-section28'/>   
-
 ### Entry 28: 2020-02-19, Wednesday.   
 
 
 
 ------
 <div id='id-section29'/>   
-
 ### Entry 29: 2020-02-20, Thursday.   
 
 
 
 ------
 <div id='id-section30'/>   
-
 ### Entry 30: 2020-02-21, Friday.   
 
 
 
 ------
 <div id='id-section31'/>   
-
 ### Entry 31: 2020-02-24, Monday.   
 
 
 
 ------
 <div id='id-section32'/>   
-
 ### Entry 32: 2020-02-25, Tuesday.   
 
 
 
 ------
 <div id='id-section33'/>   
-
 ### Entry 33: 2020-02-26, Wednesday.   
 
 
 
 ------
 <div id='id-section34'/>   
-
 ### Entry 34: 2020-02-27, Thursday.   
 
 
 
 ------
 <div id='id-section35'/>   
-
 ### Entry 35: 2020-02-28, Friday.   
 
 
 
 ------
 <div id='id-section36'/>   
-
 ### Entry 36: 2020-03-02, Monday.   
 
 
 
 ------
 <div id='id-section37'/>   
-
 ### Entry 37: 2020-03-03, Tuesday.   
 
 
 
 ------
 <div id='id-section38'/>   
-
 ### Entry 38: 2020-03-04, Wednesday.   
 
 
 
 ------
 <div id='id-section39'/>   
-
 ### Entry 39: 2020-03-05, Thursday.   
 
 
 
 ------
 <div id='id-section40'/>   
-
 ### Entry 40: 2020-03-06, Friday.   
 
 
 
 ------
 <div id='id-section41'/>   
-
 ### Entry 41: 2020-03-09, Monday.   
 
 
 
 ------
 <div id='id-section42'/>   
-
 ### Entry 42: 2020-03-10, Tuesday.   
 
 
 
 ------
 <div id='id-section43'/>   
-
 ### Entry 43: 2020-03-11, Wednesday.   
 
 
 
 ------
 <div id='id-section44'/>   
-
 ### Entry 44: 2020-03-12, Thursday.   
 
 
 
 ------
 <div id='id-section45'/>   
-
 ### Entry 45: 2020-03-13, Friday.   
 
 
 
 ------
 <div id='id-section46'/>   
-
 ### Entry 46: 2020-03-16, Monday.   
 
 
 
 ------
 <div id='id-section47'/>   
-
 ### Entry 47: 2020-03-17, Tuesday.   
 
 
 
 ------
 <div id='id-section48'/>   
-
 ### Entry 48: 2020-03-18, Wednesday.   
 
 
 
 ------
 <div id='id-section49'/>   
-
 ### Entry 49: 2020-03-19, Thursday.   
 
 
 
 ------
 <div id='id-section50'/>   
-
 ### Entry 50: 2020-03-20, Friday.   
 
 
 
 ------
 <div id='id-section51'/>   
-
 ### Entry 51: 2020-03-23, Monday.   
 
 
 
 ------
 <div id='id-section52'/>   
-
 ### Entry 52: 2020-03-24, Tuesday.   
 
 
 
 ------
 <div id='id-section53'/>   
-
 ### Entry 53: 2020-03-25, Wednesday.   
 
 
 
 ------
 <div id='id-section54'/>   
-
 ### Entry 54: 2020-03-26, Thursday.   
 
 
 
 ------
 <div id='id-section55'/>   
-
 ### Entry 55: 2020-03-27, Friday.   
 
 
 
 ------
 <div id='id-section56'/>   
-
 ### Entry 56: 2020-03-30, Monday.   
 
 
 
 ------
 <div id='id-section57'/>   
-
 ### Entry 57: 2020-03-31, Tuesday.   
 
 
 
 ------
 <div id='id-section58'/>   
-
 ### Entry 58: 2020-04-01, Wednesday.   
 
 
 
 ------
 <div id='id-section59'/>   
-
 ### Entry 59: 2020-04-02, Thursday.   
 
 
 
 ------
 <div id='id-section60'/>   
-
 ### Entry 60: 2020-04-03, Friday.   
 
 
 
 ------
 <div id='id-section61'/>   
-
 ### Entry 61: 2020-04-06, Monday.   
 
 
 
 ------
 <div id='id-section62'/>   
-
 ### Entry 62: 2020-04-07, Tuesday.   
 
 
 
 ------
 <div id='id-section63'/>   
-
 ### Entry 63: 2020-04-08, Wednesday.   
 
 
 
 ------
 <div id='id-section64'/>   
-
 ### Entry 64: 2020-04-09, Thursday.   
 
 
 
 ------
 <div id='id-section65'/>   
-
 ### Entry 65: 2020-04-10, Friday.   
 
 
 
 ------
 <div id='id-section66'/>   
-
 ### Entry 66: 2020-04-13, Monday.   
 
 
 
 ------
 <div id='id-section67'/>   
-
 ### Entry 67: 2020-04-14, Tuesday.   
 
 
 
 ------
 <div id='id-section68'/>   
-
 ### Entry 68: 2020-04-15, Wednesday.   
 
 
 
 ------
 <div id='id-section69'/>   
-
 ### Entry 69: 2020-04-16, Thursday.   
 
 
 
 ------
 <div id='id-section70'/>   
-
 ### Entry 70: 2020-04-17, Friday.   
 
 
 
 ------
 <div id='id-section71'/>   
-
 ### Entry 71: 2020-04-20, Monday.   
 
 
 
 ------
 <div id='id-section72'/>   
-
 ### Entry 72: 2020-04-21, Tuesday.   
 
 
 
 ------
 <div id='id-section73'/>   
-
 ### Entry 73: 2020-04-22, Wednesday.   
 
 
 
 ------
 <div id='id-section74'/>   
-
 ### Entry 74: 2020-04-23, Thursday.   
 
 
 
 ------
 <div id='id-section75'/>   
-
 ### Entry 75: 2020-04-24, Friday.   
 
 
 
 ------
 <div id='id-section76'/>   
-
 ### Entry 76: 2020-04-27, Monday.   
 
 
 
 ------
 <div id='id-section77'/>   
-
 ### Entry 77: 2020-04-28, Tuesday.   
 
 
 
 ------
 <div id='id-section78'/>   
-
 ### Entry 78: 2020-04-29, Wednesday.   
 
 
 
 ------
 <div id='id-section79'/>   
-
 ### Entry 79: 2020-04-30, Thursday.   
 
 
 
 ------
 <div id='id-section80'/>   
-
 ### Entry 80: 2020-05-01, Friday.   
 
 
 
 ------
 <div id='id-section81'/>   
-
 ### Entry 81: 2020-05-04, Monday.   
 
 
 
 ------
 <div id='id-section82'/>   
-
 ### Entry 82: 2020-05-05, Tuesday.   
 
 
 
 ------
 <div id='id-section83'/>   
-
 ### Entry 83: 2020-05-06, Wednesday.   
 
 
 
 ------
 <div id='id-section84'/>   
-
 ### Entry 84: 2020-05-07, Thursday.   
 
 
 
 ------
 <div id='id-section85'/>   
-
 ### Entry 85: 2020-05-08, Friday.   
 
 
