--- a/EcolNotebook.Rmd
+++ b/EcolNotebook.Rmd
@@ -1,3 +1,5 @@
+
+
 # Ecological Genomics Notebook  
 
 ## Author: Erika Bueno  
@@ -488,16 +490,63 @@ fix permission to run the script
 
 `bash fastqc.sh`
 
-it should run 
+it should run git
 
 git pull after
 
+results- basic statistics
+
 ```
 git pull
-git add --all .
+git add --all 
 git commit -m "note"
 git push
 ```
+
+Trimming our reads with Trimmomatic
+
+`cd /data/scripts`
+
+`cp trim_loop.sh  /Ecolgenomics/myscripts/`
+
+`vim trimm_loop.sh`
+
+edit script for individual population
+
+`cd /data/project_data/RS_ExomeSeq/fastq/edge_fastq
+
+for R1 in CRA*R1_fastq.gz
+
+do
+
+        R2=${R1/_R1_fastq.gz/_R2_fastq.gz}
+        f=${R1/_R1_fastq.gz/}
+        name=`basename ${f}`
+    
+        java -classpath /data/popgen/Trimmomatic-0.33/trimmomatic-0.33.jar org.usadellab.trimmomatic.TrimmomaticPE \
+        -threads 1 \
+        -phred33 \
+         "$R1" \
+         "$R2" \
+         /data/project_data/RS_ExomeSeq/fastq/edge_fastq/pairedcleanreads/${name}_R1.cl.pd.fq \
+         /data/project_data/RS_ExomeSeq/fastq/edge_fastq/unpairedcleanreads/${name}_R1.cl.un.fq \
+         /data/project_data/RS_ExomeSeq/fastq/edge_fastq/pairedcleanreads/${name}_R2.cl.pd.fq \
+         /data/project_data/RS_ExomeSeq/fastq/edge_fastq/unpairedcleanreads/${name}_R2.cl.un.fq \
+        ILLUMINACLIP:/data/popgen/Trimmomatic-0.33/adapters/TruSeq3-PE.fa:2:30:10 \
+        LEADING:20 \
+        TRAILING:20 \
+        SLIDINGWINDOW:6:20 \
+        MINLEN:35
+        
+escape + :wq  #escaping vim mode
+
+`bash trim_loop.sh ` #runs the program
+
+**HW: run fastqc on our trimmed sequences- cleaned paired reads for R1 and R2 ONLY**
+
+location of cleaned reads:
+
+`/data/project_data/RS_ExomeSeq/fastq/edge_fastq/pairedcleanreads/ `
 
 ------
 <div id='id-section16'/>   
